New GP causes errors with Pie menus #46973

Closed
opened 2015-12-14 21:39:57 +01:00 by Aaron Carlisle · 7 comments
Member

System Information
Windows 8.0
Intel HD 4600

Blender Version
Broken: 2.76.4 1fbd742

Short description of error
Recent additions to Grease pencil causes there to be more then the allowed number of things for a pie menu.
Visible issues:

  1. Command line prints "Warning: Pie menus with more than 8 items are currently unsupported"
  2. Object mode entry missing in stroke edit mode

Exact steps for others to reproduce the error

  1. Enable pie menus
  2. Start using the GP
  3. Enable editing
  4. Hit tab
**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.76.4 1fbd742 **Short description of error** Recent additions to Grease pencil causes there to be more then the allowed number of things for a pie menu. Visible issues: 1. Command line prints "Warning: Pie menus with more than 8 items are currently unsupported" 2. Object mode entry missing in stroke edit mode **Exact steps for others to reproduce the error** 0. Enable pie menus 1. Start using the GP 2. Enable editing 3. Hit tab
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Strictly speaking, there aren't more than 8 items getting added to that pie menu. In fact, previously there were only 6 items actually being shown, and now only 7.

Strictly speaking, there aren't more than 8 items getting added to that pie menu. In fact, previously there were only 6 items actually being shown, and now only 7.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2015-12-15 15:52:21 +01:00
Member

Committed temporary workaround 669fdca68.

Committed temporary workaround 669fdca68.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46973
No description provided.